modules/panel/client/css/panel.css
/* ... */
.concept-list-nested .concept-list-nested:before {
    left: -1px;
}*/

.course-list > .concept > .concept-list > .concept:last-child > .concept-list:after, .course-list > .concept > .concept-list > .concept:last-child > .concept-list > .concept:last-child > .concept-list:after {
    border-top: none;
}

.course-list > .concept > .concept-list > .concept:last-child > .concept-list-nested > .concept.inactive:last-child > a > .concept-line,
.course-list > .concept > .concept-list > .concept:last-child > .concept-list-nested > .concept:last-child > .concept-list-nested > .concept:last-child > a > .concept-line,
.course-list > .concept > .concept-list > .concept.inactive:last-child > a > .concept-line {
    min-height: 10px;
    height: 13px;
}

.course-list > .concept > .concept-list > .concept.active:last-child > a > .concept-line,
.concept-list > .concept:last-child > .concept-list-nested > .concept.active:last-child > a > .concept-line,
.course-list > .concept > .concept-list > .concept.hover:last-child > a > .concept-line,
.concept-list > .concept:last-child > .concept-list-nested > .concept.hover:last-child > a > .concept-line {
    /*min-height: 30px;*/
    height: 100%;
}

.concept-list-nested {
    position: relative;
    /*margin-top: -4px;*/
    /*margin-left: 14px;*/
    /*margin-bottom: 3px;*/
    margin-right: 20px;
    padding-left: 8pt;
    padding-top: 6pt;
}

.concept-list-nested .concept-line {
    left: 14px;
    /*min-height: 35px;*/
    /*margin-bottom: -5px;*/

}
.concept-list-nested .concept-circle {
    width: 14pt;
    height: 14pt;
    border-radius: 8pt;
    left: 4px;
    top: 1px;
}

.concept-list-nested .concept-list-nested .concept-circle {
    width: 10pt;
    height: 10pt;
    border-radius: 5pt;
    left: 7px;
    top: 3px;
}


.concept-list-nested .flag {
    left: -7px;
    top: -9px;
    color: #333;
}

.concept-list-nested .concept-list-nested {
    /*margin-top: -4px;*/
    /* margin-bottom: 11px; */
    /*padding-bottom: 5px;*/
    /*margin-bottom: -4px;*/
}
.concept-list-nested > .concept:last-child > .concept-list-nested {
    /*margin-bottom: -4px;*/
}

.panel-content {
    padding: 0 5% 0 5%;
    overflow-y: auto;
    overflow-x: hide;
}

.concept-panel ::-webkit-scrollbar {
    width: 0px;
}
.panel-minimized .concept-panel ::-webkit-scrollbar {
    width: 0px;
}

.concept-panel ::-webkit-scrollbar-track {
    /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);*/
/*    border-radius: 10px;
    background: #eee;*/
}

.concept-panel ::-webkit-scrollbar-thumb {
    /*border-radius: 10px;*/
    /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);*/
    /*background: #bbb;*/
}

/** -------------------------------- SEGMENTS -------------------------------- **/

/*
.minimized .segment {
    margin-right: 20px;
}*/
.segment {
    list-style: none;
    margin: 5px 5px -15px 5px;
    position: relative;
    padding-bottom: 12px;
}
.segment a {
    border-radius: 7px;
    background: #eee;
}
.segment.group.collapsed .segment-link {
    box-shadow: #ccc 4px 4px 0, #ddd 8px 8px 0;
    border-color: #fff;
    border-bottom-width: 2px;
    border-right-width: 2px;
    margin-bottom: 8px;
}

.segment .segment-link {
    display: block;
    padding: 5px 15px;
    text-decoration: none;
    min-height: 30px;
    position: relative;
    z-index: 100;
}

.segment.active a, .segment a:hover, .segment.hover a {
    background: #ddd;
}
.segment.active.nothover a {
    background: #eee;
}

.alternative-segments {
    padding-left: 15pt;
    list-style: none;
}
.group-segments {
    /*padding-left: -4px;*/
    padding-bottom: 5px;

}
.group-segments .segment {
    /*padding-left: 10px;*/
}
.group-segments .segment .concept-line {
    left: -36px !important;
}

.segment .concept-line {
    left: -8pt;
    top: -8px;
}
.concept-list-nested .segment .concept-line {
    left: -8pt;
}

.concept-list-nested .concept-list-nested .segment .concept-line {
    left: -11px;
}

.segment-title {
    display: block;
    margin: -20px 0 0 20px;
}

/* this is to mark the 'recommended' segment */

.alternative-segments:not(.group-segments) > .segment:first-child:not(:only-child):not(.add-material) {
    margin-bottom: 9px;
    border-bottom: 1px dashed #666;
}

.alternative-segments:not(.group-segments) > .segment:first-child:not(:only-child) .concept-line {
    padding-bottom: 50px;
    padding-top: 50px;
}

.alternative-segments:not(.group-segments) > .segment:first-child:not(.add-material):after {
    content: "\f005"; /* this is a star: fa-star */
    display: inline-block;
    font: normal normal normal 14px/1 FontAwesome;
    font-size: inherit;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
    position: absolute;
    top: 5px;
    right: 5px;
    color: #e5c100;
}

/** -------------------------------- BUTTONS -------------------------------- **/


.maximized .learning-buttons {
    position: relative;
    left: 0;
    bottom: -15px;
    padding: 0 10px;
    font-size: 10px;
    /*border: 1px solid;*/
    width: 100%;
    height: auto;
    display: block;
    margin: 0;
}
.buttonRow {
    /*padding-top: 10px;*/
    width: 105%;
    display: table;
}

.maximized .sidepanel .learning-buttons .row {
    /*padding: 10pt 20pt 0 20pt;*/
    background: transparent;
}

.learning-buttons hr {
    margin: 0 auto;
    width: 90%;
    border-color: #eeeeee;
}


.maximized .learning-buttons .halfWidthBtn {
    width: 48.5%;
}

.maximized .learning-buttons .btn-group {
    width: 100%;
}
.maximized .learning-buttons .learned-state .btn-group .btn {
    width: 33.3%;
}

.learning-buttons .btn[disabled] {
    opacity: 1;
    cursor: default;
    pointer-events: none;
}
/* ... */

